# ocularis

./: .cursorrules  .env.example  .gitignore  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml
api/: dependencies.py  main.py
core/: browser_manager.py  logging_setup.py  model_client.py  run_session.py  schemas.py  settings.py
db/: engine.py  models.py  repository.py
logic/: content_extractor.py  goal_evaluator.py  goal_planner.py  intent_resolver.py  memory.py  page_classifier.py  prompts.py  reasoning_executor.py  strategy_router.py  supervisor.py  text_reasoner.py
scripts/: start_chrome_debug.sh
tests/: conftest.py  test_api_endpoints.py  test_browser_manager.py  test_browser_manager_s2.py  test_context_aware.py  test_goal_evaluator.py  test_memory.py  test_orchestration.py  test_run_session.py  test_supervisor.py
web/dashboard/: package-lock.json  package.json
web/dashboard/app/: layout.tsx  page.tsx
web/dashboard/app/runs/[runId]/: page.tsx
web/dashboard/components/: HitlControls.tsx  LiveView.tsx  RunList.tsx  StatusBadge.tsx
web/dashboard/lib/: api.ts  types.ts
